--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -39,12 +39,12 @@ p {
   margin: 1rem 0;
 }
 
-h1 {
+/* h1 {
   color: black;
   font-size: 7vw;
   font-weight: 500;
   text-shadow: 3px 4px 0 rgba(0, 0, 0, 0.2);
-}
+} */
 
 /* nav {
   background: grey;
@@ -81,7 +81,7 @@ nav a:not(.active):hover {
   background-color: black;
 } */
 
-/* img {
+ /* img {
   width: 100%;
 }
 
@@ -92,7 +92,7 @@ li.logo {
 li.logo img {
   width: 3rem;
   height: 3rem;
-} */ 
+}  */
 
 .entry {
   display: grid;
